fix: make smaller buttons on mobile devices

--- a/css/custom.scss
+++ b/css/custom.scss
@@ -451,7 +451,17 @@ footer {
       }
     }
   }
+  .button-container {
+    a.btn.btn-lg {
+      padding: 6px 10px;
+      font-size: 15px;
+      line-height: 1.43;
+      text-align: center;
+      border-radius: 4px;
+    }
+  }
 }
+
 
 @media print {
   body {
